# ferret

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/args/: mod.rs
crates/cli/src/bench/: mod.rs  runtime.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/api/: hostile.rs  mod.rs
crates/core/tests/: adversarial_output.rs  open_call_execution.rs  repo_guard.rs  semantic_coverage.rs  string_escape_execution.rs  trusted_loaders.rs  vararg_execution.rs  vm_execution.rs
crates/core/tests/support/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/output/: Cargo.toml
crates/output/src/: decoy.rs  decoy_sections.rs  ident.rs  lib.rs  numbers.rs  plan.rs  profile.rs  rename.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
tests/: README.md
tests/adversarial/: weak_output_sample.lua
tests/bench/: runtime_mismatch_exclusions.txt  runtime_overhead.lua
tests/fixtures/: basic.lua  control.lua  table.lua
tests/lua54_conformance/: 001_multireturn_assignment.lua  002_return_open_tail.lua  003_table_final_multireturn.lua  004_lexical_env_nested.lua  005_goto_forward_backward.lua  006_close_do_scope.lua  007_close_return_scope.lua  008_coroutine_vm_closure.lua  009_pcall_multireturn.lua  010_vararg_return_tail.lua
tests/scripts/basics/: 001_basics.lua  002_basics.lua  003_basics.lua  004_basics.lua  005_basics.lua  006_basics.lua  007_basics.lua  008_basics.lua  009_basics.lua  010_basics.lua  011_basics.lua  (+7 more)
(+245 files in other folders)
