[package]
name = "ferret-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ferret"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ferret-core.workspace = true
serde_json.workspace = true
tempfile.workspace = true
