[package]
name = "ferret-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferret-parse.workspace = true
ferret-util.workspace = true
ferret-vm.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
