[package]
name = "ferret-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferret-core.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
